# MCP

./: .gitignore
Documentations/: Groq.json
FileAccess/: config.json  index.ts  package-lock.json  tsconfig.json
Jira/: README.md  config.json
MasterServer/: GUI.py  __init__.py  __main__.py  config.py  pyproject.toml
NWS/: config.json  pyproject.toml  server.py
PizzaAPI/: .gitignore  __init__.py  menu.json  pyproject.toml  server.py  test_server.py  topping_guide.py
Slack/: config.json  package-lock.json  tsconfig.json
Todoist/: config.json
gdrive/: .gdrive-server-credentials.json  config.json  gcp-oauth.keys.json  index.ts  package-lock.json  tsconfig.json
github/: config.json
mcp-gsuite-main/: config.json  pyproject.toml  run-mcp-gsuite.sh
perplexity-ask/: README.md  config.json
